monitoring-single/vmagent.yaml
---
# Source: victoria-metrics-agent/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8429"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: vmagent
    app.kubernetes.io/version: "v1.96.0"
  name: vmagent
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 8429
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: vmagent
  type: "ClusterIP"
---
# Source: victoria-metrics-agent/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vmagent
  namespace: monitoring
  labels:
    app.kubernetes.io/name: vmagent
    app.kubernetes.io/version: "v1.96.0"
spec:
  replicas: 1
  serviceName: vmagent
  selector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vmagent
    spec:
      serviceAccountName: vmagent
      containers:
        - name: victoria-metrics-agent
          image: "victoriametrics/vmagent:v1.96.0"
          workingDir: /
          args:
            - -promscrape.config=/config/scrape.yml
            - -remoteWrite.tmpDataPath=/tmpData
            - -remoteWrite.url=http://vmsingle.monitoring-test.svc.cluster.local:8428/api/v1/write
            - -envflag.enable=true
            - -envflag.prefix=VM_
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8429
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          volumeMounts:
            - name: tmpdata
              mountPath: /tmpData
            - name: config
              mountPath: /config/
            - name: autoscrape-config
              mountPath: /custom-configs/autoscrape-config.yml
              subPath: autoscrape-config.yml
          resources: {}
      volumes:
        - name: config
          configMap:
            name: vmagent-config
        - name: autoscrape-config
          configMap:
            name: autoscrape-config
  volumeClaimTemplates:
  - metadata:
      name: tmpdata
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "10Gi"
