monitoring-single/vmalert.yaml
---
# Source: victoria-metrics-alert/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    app.kubernetes.io/name: victoria-metrics-alert
  name: vmalert
spec:
  ports:
    - name: http
      port: 8880
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: victoria-metrics-alert
  type: "ClusterIP"
---
# Source: victoria-metrics-alert/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmalert
  namespace: monitoring
  labels:
    app.kubernetes.io/name: victoria-metrics-alert
spec:
  minReadySeconds: 0
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: victoria-metrics-alert
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: victoria-metrics-alert
    spec:
      serviceAccountName: vmalert-victoria-metrics-alert
      containers:
        - name: victoria-metrics-alert-server
          image: "victoriametrics/vmalert:v1.96.0"
          args:
            - -rule=/rules/*.yaml
            - -datasource.url=http://vmsingle.monitoring.svc.cluster.local:8428
            - -notifier.url=
            - -remoteRead.url=
            - -remoteWrite.url=http://vmsingle.monitoring.svc.cluster.local:8428
            - -envflag.enable=true
            - -envflag.prefix=VM_
            - -loggerFormat=json
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8880
          
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          
          volumeMounts:
            - name: record-rules
              mountPath: /rules/record.yaml
              subPath: record.yaml
    
            
          resources:
            {}
      volumes:
        - name: record-rules
          configMap:
            name: record-rules-config
